feat: publish native Gradle tools binaries